auto_branch_pushes/ken/unsubscription-sync/ppluto-main/overlays/prod_eks/deployment-misc.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ppluto-main-misc
spec:
  selector:
    matchLabels:
      app: ppluto-main-misc
  replicas: 1
  template:
    metadata:
      labels:
        app: ppluto-main-misc
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.pluto.co/purpose
                    operator: In
                    values:
                      - service
      terminationGracePeriodSeconds: 60 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-misc
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:d0411a7be70259fa37c7af02ac619069a18cf31afa2b57fd8b5e51ff53bff41a
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: 1000m
              memory: 3Gi
              ephemeral-storage: 9Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]

      imagePullSecrets:
        - name: gitlab-container-registry

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ppluto-main-wsrv
spec:
  selector:
    matchLabels:
      app: ppluto-main-wsrv
  replicas: 2
  template:
    metadata:
      labels:
        app: ppluto-main-wsrv
    spec:
      terminationGracePeriodSeconds: 60 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-misc
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:d0411a7be70259fa37c7af02ac619069a18cf31afa2b57fd8b5e51ff53bff41a
          ports:
            - containerPort: 5088
          readinessProbe:
            httpGet:
              path: /wsrvProxy/?url=https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg
              port: 5088
            # TODO: The pod is frequently reported as not responding for an unknown reason.
            #       Maybe it's a false warning so disable livenessProbe to test that.
            # livenessProbe:
            #   httpGet:
            #     path: /wsrvProxy/?url=https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg
            #     port: 5088
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 1000m
              memory: 3Gi
              ephemeral-storage: 5Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]

      imagePullSecrets:
        - name: gitlab-container-registry
