auto_branch_pushes/ken/unsubscription-sync/ppluto-main/overlays/prod_eks/deployment.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: ppluto-main
spec:
  selector:
    matchLabels:
      app: ppluto-main
  replicas: 10
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ppluto-main
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '9464'
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.pluto.co/purpose
                    operator: In
                    values:
                      - service
      terminationGracePeriodSeconds: 360 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-client
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client:b5a2040ec5729f34c0b4fa0fc8a8793e29302f00817e75ddce61ab2db77e6153
          ports:
            - containerPort: 5280
            - containerPort: 5380
            - containerPort: 5480
          resources:
            requests:
              cpu: 40m
            limits:
              cpu: 200m
              memory: 100Mi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-client-tickerbell
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client-tickerbell:4e228453c3c7a9cdc231802c0391d016e9327035fba2e8a9ab880ccffdbc077f
          ports:
            - containerPort: 5080
            - containerPort: 5095
          readinessProbe:
            httpGet:
              port: 5080
              path: /
          livenessProbe:
            httpGet:
              port: 5080
              path: /
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 3Gi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-server
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:19d00f084e880429b9ce1f1990d6faf95763a360822f4997769b1dd6c8720bc0
          ports:
            - containerPort: 81
            - containerPort: 82
            - containerPort: 83
            - containerPort: 84
          readinessProbe:
            # TODO: Implement gRPC health check instead. https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#probe-check-methods
            tcpSocket:
              port: 82
          # TODO: Enable `livenessProbe`.  Temporarily disabled to debug container crash issue.
          # livenessProbe:
          #   tcpSocket:
          #     port: 82
          resources:
            requests:
              cpu: 1
              memory: 8Gi
            limits:
              cpu: 3
              memory: 12Gi # Temporarily increased memory to avoid OOM crashes on GAIA batch prompt execution
              ephemeral-storage: 9Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
      imagePullSecrets:
        - name: gitlab-container-registry
  strategy:
    blueGreen:
      activeService: ppluto-main-service-active
      previewService: ppluto-main-service-preview
      autoPromotionEnabled: true
